--- a/css/stile.css
+++ b/css/stile.css
@@ -22,6 +22,25 @@
       left: 0;
   }
 }
+.alert {
+  padding: 20px;
+  background-color: #f44336;
+  color: white;
+}
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
 .copyright_paper{
   color:white;
   text-align:center
